tests/fail/union_partial_init.tk

shape BadUnion(as small: i8 | as large: i64)


fn main() -> i32 {
    auto u = BadUnion(small = 1); // EXPECT: error[E0425]: Partial initialization of Union 'BadUnion'
    return 0;
}
